--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     </section>
 
     <!-- Call to Action Section -->
-    <section class="py-16 bg-sky-700 text-white">
+    <section class="pb-12 pt-8 bg-sky-700 text-white">
         <div class="container mx-auto px-4 md:px-8 text-center">
             <p class="text-3xl font-bold mb-4">
                 "The greatness of a community is most accurately measured by the compassionate actions of its members."
@@ -302,12 +302,11 @@
                 EmpowerNext Social Welfare Foundation, India
             </p>
             <p class="mb-4">
-                Email: empowernext.ngo@gmail.com
+                Email: <a href="mailto:empowernext.ngo@gmail.com" class="hover:text-white transition duration-300">empowernext.ngo@gmail.com</a>
             </p>
             <div class="flex justify-center space-x-4">
-                <a href="#" class="hover:text-white transition duration-300">Facebook</a>
-                <a href="#" class="hover:text-white transition duration-300">Twitter</a>
-                <a href="#" class="hover:text-white transition duration-300">LinkedIn</a>
+                <a href="https://www.youtube.com/channel/UC2CX7Q-RUZqkQ5K1XIJzmiw" class="hover:text-white transition duration-300">YouTube</a>
+                <a href="https://www.linkedin.com/company/empowernext-ngo" class="hover:text-white transition duration-300">LinkedIn</a>
             </div>
         </div>
     </footer>
@@ -573,6 +572,13 @@
 
             // Initial state
             updateCarousel();
+
+            
+            setInterval(() => {
+                currentIndex = (currentIndex + 1) % slides.length;
+                updateCarousel();
+            }, 5000);
+
         });
 
 
