--- a/index.html
+++ b/index.html
@@ -120,9 +120,19 @@
             </div>
             <div class="flex flex-col md:flex-row items-center md:space-x-8">
                 <div class="md:w-1/2 mb-8 md:mb-0">
-                    <img src="vikram-aditya-8y8i070qcAk-unsplash.jpg" alt="Community work"
-                        class="rounded-xl shadow-lg transform hover:scale-105 transition duration-500">
+                    <div class="rounded-xl shadow-lg transform hover:scale-105 transition duration-500 overflow-hidden">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/mWAUhPthpv4?si=42RTIaVkXCXmUl6n"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin"
+                            allowfullscreen
+                            class="w-full h-64 md:h-80 rounded-xl">
+                        </iframe>
+                    </div>
                 </div>
+
                 <div class="md:w-1/2 text-center md:text-left">
                     <p class="text-2xl font-semibold italic text-gray-700 leading-relaxed">
                         "Alone we can do so little; together we can do so much." - Helen Keller
@@ -298,7 +308,7 @@
     <!-- Footer Section -->
     <footer id="contact" class="bg-gray-800 text-gray-300 py-8">
         <div class="container mx-auto px-4 md:px-8 text-center">
-            <p class="mb-4">
+            <p>
                 EmpowerNext Social Welfare Foundation, India
             </p>
             <p class="mb-4">
@@ -307,6 +317,13 @@
             <div class="flex justify-center space-x-4">
                 <a href="https://www.youtube.com/channel/UC2CX7Q-RUZqkQ5K1XIJzmiw" class="hover:text-white transition duration-300">YouTube</a>
                 <a href="https://www.linkedin.com/company/empowernext-ngo" class="hover:text-white transition duration-300">LinkedIn</a>
+            </div>
+            <div class="flex justify-center items-center gap-4 pt-4">
+            <a href="/privacy.html" class="hover:text-white transition duration-300">Privacy Policy</a><span>|</span>
+            <a href="/terms-conditions.html" class="hover:text-white transition duration-300">Terms & Conditions</a><span>|</span>
+            <a href="/cancellation-refund.html" class="hover:text-white transition duration-300">Cancellation & Refund</a><span>|</span>
+            <a href="/shipping.html" class="hover:text-white transition duration-300">Shipping Policy</a><span>|</span>
+            <a href="/contact.html" class="hover:text-white transition duration-300">Contact Us</a>
             </div>
         </div>
     </footer>
