--- a/shipping.html
+++ b/shipping.html
@@ -10,7 +10,7 @@
   <p>
     As a non-profit organization, we primarily accept donations and do not ship physical goods.
     However, if any merchandise, receipt, or acknowledgment letter is to be sent,
-    it will be dispatched digitally to your registered email ID or by post if required.
+    it will be dispatched digitally to your registered email ID or by post within 6-10 working days if required.
   </p>
   <p>
     For any shipping-related queries, please contact us at
