--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <a href="/privacy.html" class="hover:text-white transition duration-300">Privacy Policy</a><span>|</span>
             <a href="/terms-conditions.html" class="hover:text-white transition duration-300">Terms & Conditions</a><span>|</span>
             <a href="/cancellation-refund.html" class="hover:text-white transition duration-300">Cancellation & Refund</a><span>|</span>
-            <a href="/shipping-policy.html" class="hover:text-white transition duration-300">Shipping Policy</a><span>|</span>
+            <a href="/shipping.html" class="hover:text-white transition duration-300">Shipping Policy</a><span>|</span>
             <a href="/contact.html" class="hover:text-white transition duration-300">Contact Us</a>
             </div>
         </div>
@@ -604,4 +604,5 @@
 </body>
 
 </html>
+
 
