--- a/shipping.html
+++ b/shipping.html
@@ -14,7 +14,7 @@
   </p>
   <p>
     For any shipping-related queries, please contact us at
-    <a href="mailto:empowernext.ngo@gmail.com">empowernext.ngo@gmail.com</a> or +91 63766 23599.
+    <a href="mailto:empowernext.ngo@gmail.com">empowernext.ngo@gmail.com</a>.
   </p>
 </body>
 </html>
