--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </nav>
 
             <!-- Donation Button -->
-            <a href="#donate"
+            <a href="https://rzp.io/rzp/YtwSzsEu"
                 class="bg-blue-600 text-white px-6 py-2 rounded-full font-semibold hover:bg-blue-700 transition duration-300 shadow-md">Donate
                 Now</a>
         </div>
@@ -262,6 +262,10 @@
                         class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
                     <img src="img6.jpg" alt="Youth workshop"
                         class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
+                    <img src="img7.jpg" alt="Youth workshop"
+                        class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
+                    <img src="img8.jpg" alt="Youth workshop"
+                        class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
                 </div>
 
                 <!-- Navigation Buttons -->
@@ -298,7 +302,7 @@
                 Your support fuels our mission. Every contribution, big or small, helps us empower the next generation
                 and create a more compassionate society.
             </p>
-            <a href="#donate"
+            <a href="https://rzp.io/rzp/YtwSzsEu"
                 class="bg-white text-sky-700 font-bold px-10 py-4 rounded-full text-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105 shadow-lg">
                 Donate Today
             </a>
@@ -604,5 +608,3 @@
 </body>
 
 </html>
-
-
