--- a/index.html
+++ b/index.html
@@ -286,6 +286,8 @@
                     <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
                     <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
                     <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
+                    <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
+                    <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
                 </div>
             </div>
         </div>
