--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </nav>
 
             <!-- Donation Button -->
-            <a href="https://rzp.io/rzp/YtwSzsEu"
+            <a href="https://rzp.io/rzp/44SoHmh"
                 class="bg-blue-600 text-white px-6 py-2 rounded-full font-semibold hover:bg-blue-700 transition duration-300 shadow-md">Donate
                 Now</a>
         </div>
@@ -304,7 +304,7 @@
                 Your support fuels our mission. Every contribution, big or small, helps us empower the next generation
                 and create a more compassionate society.
             </p>
-            <a href="https://rzp.io/rzp/YtwSzsEu"
+            <a href="https://rzp.io/rzp/44SoHmh"
                 class="bg-white text-sky-700 font-bold px-10 py-4 rounded-full text-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105 shadow-lg">
                 Donate Today
             </a>
