--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <!-- Aim 1: Youth Empowerment -->
                 <div class="aim-card bg-white rounded-xl shadow-lg p-8 transform hover:scale-105 transition duration-300">
                     <h4 class="text-2xl font-bold text-blue-600 mb-3">Youth Empowerment & Development</h4>
-                    <p class="text-gray-600 mb-4">
+                    <p class="text-gray-600">
                         Promoting education, skill-building, mental health awareness, and de-addiction programs for
                         underprivileged youth.
                     </p>
@@ -158,38 +158,38 @@
                 <!-- Aim 2: Skill Development -->
                 <div class="aim-card bg-white rounded-xl shadow-lg p-8 transform hover:scale-105 transition duration-300">
                     <h4 class="text-2xl font-bold text-green-600 mb-3">Skill Development & Employment</h4>
-                    <p class="text-gray-600 mb-4">
+                    <p class="text-gray-600">
                         Establishing vocational training centers to enhance youth employability and socio-economic
                         conditions.
                     </p>
                 </div>
-                <!-- Aim 3: Mental Health -->
-                <div class="aim-card bg-white rounded-xl shadow-lg p-8 transform hover:scale-105 transition duration-300">
-                    <h4 class="text-2xl font-bold text-purple-600 mb-3">Mental Health Promotion</h4>
-                    <p class="text-gray-600 mb-4">
-                        Fostering emotional resilience through awareness campaigns, counseling, and partnerships with
-                        professionals.
-                    </p>
-                </div>
-                <!-- Aim 4: De-addiction -->
+                <!-- Aim 3: De-addiction -->
                 <div class="aim-card bg-white rounded-xl shadow-lg p-8 transform hover:scale-105 transition duration-300">
                     <h4 class="text-2xl font-bold text-red-600 mb-3">De-addiction & Rehabilitation</h4>
-                    <p class="text-gray-600 mb-4">
+                    <p class="text-gray-600">
                         Conducting outreach and rehabilitation programs to combat substance abuse via support groups and
                         interventions.
+                    </p>
+                </div>
+                <!-- Aim 4: Mental Health -->
+                <div class="aim-card bg-white rounded-xl shadow-lg p-8 transform hover:scale-105 transition duration-300">
+                    <h4 class="text-2xl font-bold text-purple-600 mb-3">Mental Health Promotion</h4>
+                    <p class="text-gray-600">
+                        Fostering emotional resilience through awareness campaigns, counseling, and partnerships with
+                        professionals.
                     </p>
                 </div>
                 <!-- Aim 5: Social Welfare -->
                 <div class="aim-card bg-white rounded-xl shadow-lg p-8 transform hover:scale-105 transition duration-300">
                     <h4 class="text-2xl font-bold text-yellow-600 mb-3">Social Welfare & Relief</h4>
-                    <p class="text-gray-600 mb-4">
+                    <p class="text-gray-600">
                         Providing food, clothing, healthcare, and disaster relief to those in need.
                     </p>
                 </div>
                 <!-- Aim 6: Environmental Protection -->
                 <div class="aim-card bg-white rounded-xl shadow-lg p-8 transform hover:scale-105 transition duration-300">
                     <h4 class="text-2xl font-bold text-teal-600 mb-3">Environmental Protection</h4>
-                    <p class="text-gray-600 mb-4">
+                    <p class="text-gray-600">
                         Leading initiatives like tree plantations, waste management awareness, and eco-friendly practices.
                     </p>
                 </div>
@@ -303,8 +303,12 @@
                 Email: <a href="mailto:info@empowernext.co.in" class="hover:text-white transition duration-300">info@empowernext.co.in</a>
             </p>
             <div class="flex justify-center space-x-4">
-                <a href="https://www.youtube.com/channel/UC2CX7Q-RUZqkQ5K1XIJzmiw" class="hover:text-white transition duration-300">YouTube</a>
-                <a href="https://www.linkedin.com/company/empowernext-ngo" class="hover:text-white transition duration-300">LinkedIn</a>
+                <a href="https://www.youtube.com/channel/UC2CX7Q-RUZqkQ5K1XIJzmiw" class="hover:text-white transition duration-300">
+                    <i class="fab fa-youtube"></i> YouTube </a>
+                <a href="https://www.linkedin.com/company/empowernext-ngo" class="hover:text-white transition duration-300">
+                    <i class="fab fa-linkedin"></i> LinkedIn </a>
+                <a href="https://whatsapp.com/channel/0029VbBZgyWHQbRwduHAKj45" class="hover:text-white transition duration-300">
+                    <i class="fab fa-whatsapp"></i> WhatsApp </a>
             </div>
             <div class="flex flex-wrap justify-center items-center gap-4 pt-4 text-center">
             <a href="/privacy.html" class="hover:text-white transition duration-300">Privacy Policy</a><span>|</span>
