--- a/index.html
+++ b/index.html
@@ -58,35 +58,113 @@
 <body class="bg-gray-50 text-gray-800">
 
     <!-- Header Section -->
-    <header class="bg-white shadow-lg sticky top-0 z-50">
-        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-            <!-- Logo and Name -->
-            <a href="#" class="flex items-center space-x-3">
-                <img src="logo.png" alt="EmpowerNext Logo"
-                    class="rounded-full" height="60" width="60">
-                <!-- 60x60px -->
-                <div class="hidden sm:block">
-                    <h1 class="text-xl font-bold text-gray-900">EmpowerNext</h1>
-                    <p class="text-xs text-gray-600">Social Welfare Foundation</p>
-                </div>
-            </a>
-            <!-- Tagline for smaller screens -->
-            <p class="text-sm font-semibold text-gray-600 sm:hidden">Rise | Lead | Inspire</p>
+<!-- header.html -->
+<header class="bg-white shadow-lg sticky top-0 z-50">
+  <div class="container mx-auto px-4 py-3 flex items-center justify-between">
+    <!-- Logo + Name -->
+    <a href="#" class="flex items-center gap-3">
+      <img src="logo.png" alt="EmpowerNext Logo" class="rounded-full w-10 h-10 object-cover" />
+      <!-- On xs show only brand name abbreviated; on sm+ show full name & subtext -->
+      <div class="leading-tight">
+        <h1 class="text-sm font-bold text-gray-900 sm:text-xl sm:font-extrabold">EmpowerNext</h1>
+        <p class="text-[10px] text-gray-600 hidden sm:block">Social Welfare Foundation</p>
+      </div>
+    </a>
 
-            <!-- Navigation Menu -->
-            <nav class="space-x-4 hidden md:flex gap-12">
-                <a href="#about" class="text-gray-600 hover:text-blue-600 transition duration-300">About Us</a>
-                <a href="#aims" class="text-gray-600 hover:text-blue-600 transition duration-300">Our Aims</a>
-                <a href="#gallery" class="text-gray-600 hover:text-blue-600 transition duration-300">Gallery</a>
-                <a href="#contact" class="text-gray-600 hover:text-blue-600 transition duration-300">Contact</a>
-            </nav>
+    <!-- Small-screen tagline (visible on xs) -->
+    <p class="text-sm font-semibold text-gray-600 sm:hidden">Rise | Lead | Inspire</p>
 
-            <!-- Donation Button -->
-            <a href="https://rzp.io/rzp/44SoHmh"
-                class="bg-blue-600 text-white px-6 py-2 rounded-full font-semibold hover:bg-blue-700 transition duration-300 shadow-md">Donate
-                Now</a>
-        </div>
-    </header>
+    <!-- Desktop nav (md+) -->
+    <nav class="hidden md:flex gap-8 items-center">
+      <a href="/about.html" class="text-gray-600 hover:text-blue-600 transition duration-300">About Us</a>
+      <a href="/activities.html" class="text-gray-600 hover:text-blue-600 transition duration-300">Our Activities</a>
+      <a href="/involved.html" class="text-gray-600 hover:text-blue-600 transition duration-300">Get Involved</a>
+      <a href="https://rzp.io/rzp/44SoHmh"
+         class="ml-2 bg-blue-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-blue-700 transition duration-300 shadow-md">
+         Donate Now
+      </a>
+    </nav>
+
+    <!-- Mobile: Hamburger -->
+    <button id="nav-toggle" aria-controls="mobile-menu" aria-expanded="false"
+            class="md:hidden inline-flex items-center justify-center p-2 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+      <span class="sr-only">Open main menu</span>
+      <!-- icon -->
+      <svg id="hamburger" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+           xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+           d="M4 6h16M4 12h16M4 18h16"></path></svg>
+    </button>
+  </div>
+
+  <!-- Mobile menu (hidden by default) -->
+  <nav id="mobile-menu" class="md:hidden hidden bg-white border-t shadow-sm">
+    <div class="px-4 py-4 space-y-3">
+      <a href="/about.html" class="block text-gray-700 hover:text-blue-600 transition">About Us</a>
+      <a href="/activities.html" class="block text-gray-700 hover:text-blue-600 transition">Our Activities</a>
+      <a href="/involved.html" class="block text-gray-700 hover:text-blue-600 transition">Get Involved</a>
+
+      <!-- Donate inside mobile menu -->
+      <a href="https://rzp.io/rzp/44SoHmh"
+         class="block text-center bg-blue-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-blue-700 transition">
+         Donate Now
+      </a>
+    </div>
+  </nav>
+
+  <!-- Floating Donate FAB for small screens -->
+  <a href="https://rzp.io/rzp/44SoHmh"
+     class="fixed bottom-4 right-4 md:hidden z-50 inline-flex items-center justify-center w-12 h-12 rounded-full shadow-lg bg-gradient-to-b from-blue-600 to-blue-700 text-white text-sm"
+     aria-label="Donate Now">
+    <!-- simple heart/donate icon -->
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 20 20" fill="currentColor">
+      <path d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 015.656 5.656L10 18.343 3.172 11.828a4 4 0 010-5.656z" />
+    </svg>
+  </a>
+</header>
+
+<!-- Minimal JS for menu toggle + basic accessibility -->
+<script>
+  (function () {
+    const btn = document.getElementById('nav-toggle');
+    const menu = document.getElementById('mobile-menu');
+    const hamburger = document.getElementById('hamburger');
+
+    function openMenu() {
+      menu.classList.remove('hidden');
+      btn.setAttribute('aria-expanded', 'true');
+      // change icon to X
+      hamburger.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>';
+    }
+    function closeMenu() {
+      menu.classList.add('hidden');
+      btn.setAttribute('aria-expanded', 'false');
+      // reset to hamburger
+      hamburger.innerHTML = '<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>';
+    }
+
+    btn.addEventListener('click', (e) => {
+      const expanded = btn.getAttribute('aria-expanded') === 'true';
+      if (expanded) closeMenu(); else openMenu();
+    });
+
+    // close when a menu link is clicked (improves UX)
+    menu.addEventListener('click', (e) => {
+      if (e.target.tagName === 'A') closeMenu();
+    });
+
+    // close on Escape
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeMenu();
+    });
+
+    // optional: click outside to close
+    document.addEventListener('click', (e) => {
+      const isClickInside = menu.contains(e.target) || btn.contains(e.target);
+      if (!isClickInside) closeMenu();
+    });
+  })();
+</script>
+
 
     <!-- Hero Section -->
     <section class="hero-bg h-screen flex items-center justify-center text-center p-4">
@@ -224,74 +302,7 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <!-- Image Gallery Section -->
-    <section id="gallery" class="py-16 bg-white">
-        <div class="container mx-auto px-4 md:px-8 text-center">
-            <h3 class="text-4xl font-bold text-gray-900 mb-12">Our Work in Action</h3>
-            <div class="relative w-full max-w-4xl mx-auto overflow-hidden rounded-xl shadow-lg">
-                <div id="carousel" class="flex transition-transform duration-500 ease-in-out">
-                    <img src="img1.jpg" alt="Skill training session"
-                        class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
-                    <img src="img2.jpg" alt="Social relief efforts"
-                        class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
-                    <img src="img3.jpg" alt="Mental health awareness"
-                        class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
-                    <img src="img4.jpg" alt="Tree planting"
-                        class="carousel-item w-full flex-shrink-0 object-cover h-[300zpx] md:h-[450px]">
-                    <img src="img5.jpg" alt="Cultural event"
-                        class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
-                    <img src="img6.jpg" alt="Youth workshop"
-                        class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
-                    <img src="img7.jpg" alt="Youth workshop"
-                        class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
-                    <img src="img8.jpg" alt="Youth workshop"
-                        class="carousel-item w-full flex-shrink-0 object-cover h-[300px] md:h-[450px]">
-                </div>
-
-                <!-- Navigation Buttons -->
-                <button id="prevBtn"
-                    class="absolute top-1/2 left-4 transform -translate-y-1/2 text-white p-3 transition">
-                    <i class="fas fa-chevron-left"></i>
-                </button>
-                <button id="nextBtn"
-                    class="absolute top-1/2 right-4 transform -translate-y-1/2 text-white p-3 transition">
-                    <i class="fas fa-chevron-right"></i>
-                </button>
-
-                <!-- Dot Indicators -->
-                <div id="dots" class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-2">
-                    <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
-                    <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
-                    <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
-                    <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
-                    <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
-                    <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
-                    <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
-                    <button class="dot w-3 h-3 rounded-full bg-white bg-opacity-50 transition"></button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Call to Action Section -->
-    <section class="pb-12 pt-8 bg-sky-700 text-white">
-        <div class="container mx-auto px-4 md:px-8 text-center">
-            <p class="text-3xl font-bold mb-4">
-                "The greatness of a community is most accurately measured by the compassionate actions of its members."
-            </p>
-            <h3 class="text-4xl md:text-5xl font-extrabold mb-6">Join Us in Making a Difference</h3>
-            <p class="text-lg mb-8 max-w-2xl mx-auto">
-                Your support fuels our mission. Every contribution, big or small, helps us empower the next generation
-                and create a more compassionate society.
-            </p>
-            <a href="https://rzp.io/rzp/44SoHmh"
-                class="bg-white text-sky-700 font-bold px-10 py-4 rounded-full text-lg hover:bg-gray-100 transition duration-300 transform hover:scale-105 shadow-lg">
-                Donate Today
-            </a>
-        </div>
-    </section>
+        </section>
 
     <!-- Footer Section -->
     <footer id="contact" class="bg-gray-800 text-gray-300 py-8">
