--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 
     <!-- Desktop nav (md+) -->
     <nav class="hidden md:flex gap-8 items-center">
+      <span class="text-black-600 font-bold">Home</a>
       <a href="/about.html" class="text-gray-600 hover:text-blue-600 transition duration-300">About Us</a>
       <a href="/activities.html" class="text-gray-600 hover:text-blue-600 transition duration-300">Our Activities</a>
       <a href="/involved.html" class="text-gray-600 hover:text-blue-600 transition duration-300">Get Involved</a>
@@ -99,6 +100,7 @@
   <!-- Mobile menu (hidden by default) -->
   <nav id="mobile-menu" class="md:hidden hidden bg-white border-t shadow-sm">
     <div class="px-4 py-4 space-y-3">
+      <span class="block text-black-700 font-bold">Home</span>
       <a href="/about.html" class="block text-gray-700 hover:text-blue-600 transition">About Us</a>
       <a href="/activities.html" class="block text-gray-700 hover:text-blue-600 transition">Our Activities</a>
       <a href="/involved.html" class="block text-gray-700 hover:text-blue-600 transition">Get Involved</a>
