--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- Desktop nav (md+) -->
     <nav class="hidden md:flex gap-8 items-center">
-      <span class="text-black-600 font-bold">Home</a>
+      <span class="text-black-600 font-bold">Home</span>
       <a href="/about.html" class="text-gray-600 hover:text-blue-600 transition duration-300">About Us</a>
       <a href="/activities.html" class="text-gray-600 hover:text-blue-600 transition duration-300">Our Activities</a>
       <a href="/involved.html" class="text-gray-600 hover:text-blue-600 transition duration-300">Get Involved</a>
