added Instagram page, changed API key

--- a/about.html
+++ b/about.html
@@ -303,7 +303,7 @@
         <img src="siddhesh.jpg" alt="Name"
              class="w-full h-full object-cover" loading="lazy">
       </div>
-      <p class="mt-3 text-sm font-semibold text-gray-900">Siddhesh Bhujiwal</p>
+      <p class="mt-3 text-sm font-semibold text-gray-900">Siddhesh Bhujbal</p>
       <p class="text-xs text-gray-600">Wells Fargo, Hyderabad</p>
       <p class="text-[11px] text-gray-500">COEP Pune</p>
     </li>
@@ -330,7 +330,7 @@
   <div id="centres-map" class="w-full h-72 sm:h-96 rounded-lg overflow-hidden shadow-md" role="region" aria-label="Map showing student centres"></div>
 
   <!-- small textual legend (accessible fallback) -->
-<ul class="mt-4 grid grid-cols-1 sm:grid-cols-3 gap-3 text-sm">
+<ul class="my-4 grid grid-cols-2 sm:grid-cols-5 gap-3 text-sm">
     <li class="flex items-start gap-3">
       <span class="w-3 h-3 rounded-full bg-blue-600 mt-1"></span>
       <div>
@@ -346,7 +346,7 @@
     <li class="flex items-start gap-3">
       <span class="w-3 h-3 rounded-full bg-blue-600 mt-1"></span>
       <div>
-        <strong>Magarpatta</strong><br><span class="text-gray-600">Chennai</span>
+        <strong>Magarpatta</strong><br><span class="text-gray-600">Pune</span>
       </div>
     </li>
     <li class="flex items-start gap-3">
@@ -359,12 +359,6 @@
       <span class="w-3 h-3 rounded-full bg-blue-600 mt-1"></span>
       <div>
         <strong>SRM</strong><br><span class="text-gray-600">Chennai</span>
-      </div>
-    </li>
-    <li class="flex items-start gap-3">
-      <span class="w-3 h-3 rounded-full bg-blue-600 mt-1"></span>
-      <div>
-        <strong>NIT Trichy</strong><br><span class="text-gray-600">Tiruchirappalli</span>
       </div>
     </li>
   </ul>
@@ -389,8 +383,7 @@
       { title: 'Kharadi',  lat: 18.5586, lng: 73.8756, details: 'Pune' },
       { title: 'AIT',  lat: 18.5886, lng: 73.8256, details: 'Pune' },
       { title: 'Magarpatta',  lat: 18.5306, lng: 73.8956, details: 'Pune' },
-      { title: 'SRM', lat: 13.0825, lng: 80.2750, details: 'Chennai' },
-      { title: 'NIT Trichy',  lat: 10.8156, lng: 78.6965, details: 'Tiruchirappalli' }
+      { title: 'SRM', lat: 13.0825, lng: 80.2750, details: 'Chennai' }
     ];
 
     // Initialize map (center + zoom are temporary — we'll fit bounds to markers)
@@ -447,6 +440,8 @@
                     <i class="fab fa-youtube"></i> YouTube </a>
                 <a href="https://www.linkedin.com/company/empowernext-ngo" class="hover:text-white transition duration-300">
                     <i class="fab fa-linkedin"></i> LinkedIn </a>
+                <a href="https://www.instagram.com/empowernext.ngo/" class="hover:text-white transition duration-300">
+                    <i class="fab fa-instagram"></i> Instagram </a>
                 <a href="https://whatsapp.com/channel/0029VbBZgyWHQbRwduHAKj45" class="hover:text-white transition duration-300">
                     <i class="fab fa-whatsapp"></i> WhatsApp </a>
             </div>
