--- a/activities.html
+++ b/activities.html
@@ -207,7 +207,7 @@
             <div class="flex flex-col md:flex-row items-center gap-8">
                 <img src="img3.jpg" class="w-full md:w-1/3 rounded-xl shadow object-cover h-[240px]" alt="Indian Knowledge Programs">
                 <div class="md:w-2/3">
-                    <h4 class="text-3xl font-bold text-gray-900 mb-3">Indian Knowledge System</h4>
+                    <h4 class="text-3xl font-bold text-gray-900 mb-3">The Vedic Gurukul: IKS Initiative</h4>
                     <p class="text-lg text-gray-600">
                         Classes to introduce students to the rich knowledge of Indian Vedas and to teach moral values based on the Indian scriptures.
                     </p>
@@ -543,6 +543,8 @@
                     <i class="fab fa-youtube"></i> YouTube </a>
                 <a href="https://www.linkedin.com/company/empowernext-ngo" class="hover:text-white transition duration-300">
                     <i class="fab fa-linkedin"></i> LinkedIn </a>
+                <a href="https://www.instagram.com/empowernext.ngo/" class="hover:text-white transition duration-300">
+                    <i class="fab fa-instagram"></i> Instagram </a>
                 <a href="https://whatsapp.com/channel/0029VbBZgyWHQbRwduHAKj45" class="hover:text-white transition duration-300">
                     <i class="fab fa-whatsapp"></i> WhatsApp </a>
             </div>
