--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
                 <a href="https://whatsapp.com/channel/0029VbBZgyWHQbRwduHAKj45" class="hover:text-white transition duration-300">
                     <i class="fab fa-whatsapp"></i> WhatsApp </a>
             </div>
-            <div class="flex flex-wrap justify-center items-center gap-4 pt-4 text-center">
-            <a href="/privacy.html" class="hover:text-white transition duration-300">Privacy Policy</a><span>|</span>
-            <a href="/terms-conditions.html" class="hover:text-white transition duration-300">Terms & Conditions</a><span>|</span>
-            <a href="/cancellation-refund.html" class="hover:text-white transition duration-300">Cancellation & Refund</a><span>|</span>
-            <a href="/shipping.html" class="hover:text-white transition duration-300">Shipping Policy</a><span>|</span>
+            <div class="flex-wrap justify-center items-center md:gap-4 pt-4 text-center">
+            <a href="/privacy.html" class="hover:text-white transition duration-300">Privacy Policy</a><span> |</span>
+            <a href="/terms-conditions.html" class="hover:text-white transition duration-300">Terms & Conditions</a><span> |</span>
+            <a href="/cancellation-refund.html" class="hover:text-white transition duration-300">Cancellation & Refund</a><span> |</span>
+            <a href="/shipping.html" class="hover:text-white transition duration-300">Shipping Policy</a><span> |</span>
             <a href="/contact.html" class="hover:text-white transition duration-300">Contact Us</a>
             </div>
         </div>
