--- a/involved.html
+++ b/involved.html
@@ -368,9 +368,8 @@
 
     <!-- Social Wall Embeds -->
     <div class="rounded-xl border border-gray-200 bg-white shadow-sm col-span-2">
-      <div class="p-6 space-y-4">
+      <div class="p-6 space-y-3">
         <h3 class="text-xl font-semibold text-gray-900">Social Wall</h3>
-        <p class="text-gray-700">Live updates from our community initiatives.</p>
 
 <!-- LinkedIn -->
 <a href="https://www.linkedin.com/company/empowernext-ngo" target="_blank" rel="noopener noreferrer"
@@ -421,6 +420,34 @@
   </div>
 </a>
 
+<a href="https://www.instagram.com/empowernext.ngo/" 
+   target="_blank" rel="noopener noreferrer"
+   class="w-full block rounded-lg overflow-hidden">
+
+  <div class="rounded-lg bg-pink-50 p-4 flex items-center justify-between gap-4">
+    <!-- Icon + Text -->
+    <div class="flex items-start gap-3 min-w-0">
+      <i class="fab fa-instagram text-pink-600 text-xl flex-shrink-0"></i>
+      <div>
+        <h4 class="text-sm font-semibold text-gray-900 truncate">
+          Our Instagram Page
+        </h4>
+        <p class="text-xs text-gray-600">
+          Tap to open in Instagram Web or the app.
+        </p>
+      </div>
+    </div>
+
+    <!-- Follow button (locked to right side) -->
+    <div class="flex-shrink-0">
+      <span class="inline-flex items-center px-3 py-2 bg-pink-600 text-white rounded-md text-sm font-medium">
+        Follow
+      </span>
+    </div>
+
+  </div>
+</a>
+
 <a href="https://whatsapp.com/channel/0029VbBZgyWHQbRwduHAKj45" 
    target="_blank" rel="noopener noreferrer"
    class="w-full block rounded-lg overflow-hidden">
@@ -442,7 +469,7 @@
     <!-- Follow button (locked to right side) -->
     <div class="flex-shrink-0">
       <span class="inline-flex items-center px-3 py-2 bg-green-600 text-white rounded-md text-sm font-medium">
-        Follow
+        Join
       </span>
     </div>
 
@@ -526,6 +553,8 @@
                     <i class="fab fa-youtube"></i> YouTube </a>
                 <a href="https://www.linkedin.com/company/empowernext-ngo" class="hover:text-white transition duration-300">
                     <i class="fab fa-linkedin"></i> LinkedIn </a>
+                <a href="https://www.instagram.com/empowernext.ngo/" class="hover:text-white transition duration-300">
+                    <i class="fab fa-instagram"></i> Instagram </a>
                 <a href="https://whatsapp.com/channel/0029VbBZgyWHQbRwduHAKj45" class="hover:text-white transition duration-300">
                     <i class="fab fa-whatsapp"></i> WhatsApp </a>
             </div>
