--- a/about.html
+++ b/about.html
@@ -282,7 +282,7 @@
              class="w-full h-full object-cover" loading="lazy">
       </div>
       <p class="mt-3 text-sm font-semibold text-gray-900">Omkar Pulapa</p>
-      <p class="text-xs text-gray-600">TCS</p>
+      <p class="text-xs text-gray-600">Sophos, Bangalore</p>
       <p class="text-[11px] text-gray-500">SRM Chennai</p>
     </li>
 
