--- a/involved.html
+++ b/involved.html
@@ -350,8 +350,7 @@
       <img src="benevity.png" alt="Logo 2" class="w-20 h-20 rounded-full object-cover" />
     </div>
     <p class="text-gray-700 mb-6">
-      We build trusted payment technologies and data-driven solutions that enable inclusive growth.
-      Learn about our impact programs and ways employees can contribute.
+      We collaborate with platforms like <strong>Benevity</strong> enabling corporates to also contribute towards the activites of EmpowerNext. Learn about our impact programs and ways employees can contribute.
     </p>
     <div class="flex flex-wrap gap-3">
       <p class="inline-flex items-center rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-700 hover:bg-gray-50">
