--- a/activities.html
+++ b/activities.html
@@ -274,6 +274,12 @@
 
         <div role="listitem" class="snap-start flex-shrink-0 w-32 sm:w-48">
           <button class="w-full h-24 sm:h-32 rounded-lg overflow-hidden focus:outline-none focus:ring-2 focus:ring-blue-500" aria-label="Open photo B">
+            <img src="img23.jpg" alt="Photo B" class="w-full h-full object-cover" loading="lazy">
+          </button>
+        </div>
+
+        <div role="listitem" class="snap-start flex-shrink-0 w-32 sm:w-48">
+          <button class="w-full h-24 sm:h-32 rounded-lg overflow-hidden focus:outline-none focus:ring-2 focus:ring-blue-500" aria-label="Open photo B">
             <img src="img2.jpg" alt="Photo B" class="w-full h-full object-cover" loading="lazy">
           </button>
         </div>
@@ -353,6 +359,18 @@
           </div>
 
           <div role="listitem" class="snap-start flex-shrink-0 w-28 sm:w-36">
+            <button class="w-full h-20 sm:h-24 rounded-lg overflow-hidden focus:outline-none focus:ring-2 focus:ring-blue-500" aria-label="Open photo D">
+              <img src="img24.jpg" alt="Photo D" class="w-full h-full object-cover" loading="lazy">
+            </button>
+          </div>
+
+          <div role="listitem" class="snap-start flex-shrink-0 w-28 sm:w-36">
+            <button class="w-full h-20 sm:h-24 rounded-lg overflow-hidden focus:outline-none focus:ring-2 focus:ring-blue-500" aria-label="Open photo D">
+              <img src="img25.jpg" alt="Photo D" class="w-full h-full object-cover" loading="lazy">
+            </button>
+          </div>
+
+          <div role="listitem" class="snap-start flex-shrink-0 w-28 sm:w-36">
             <button class="w-full h-20 sm:h-24 rounded-lg overflow-hidden focus:outline-none focus:ring-2 focus:ring-blue-500" aria-label="Open photo E">
               <img src="img19.jpg" alt="Photo E" class="w-full h-full object-cover" loading="lazy">
             </button>
@@ -394,6 +412,12 @@
            class="thumb-strip flex gap-3 overflow-x-auto snap-x snap-mandatory px-2 py-2 touch-pan-x scrollbar-hide rounded-md"
            role="list" aria-label="Photo strip row 3" tabindex="0">
         <!-- Example items -->
+        <div role="listitem" class="snap-start flex-shrink-0 w-32 sm:w-48">
+          <button class="w-full h-24 sm:h-32 rounded-lg overflow-hidden focus:outline-none focus:ring-2 focus:ring-blue-500" aria-label="Open photo A">
+            <img src="img26.jpg" alt="Photo A" class="w-full h-full object-cover" loading="lazy">
+          </button>
+        </div>
+
         <div role="listitem" class="snap-start flex-shrink-0 w-32 sm:w-48">
           <button class="w-full h-24 sm:h-32 rounded-lg overflow-hidden focus:outline-none focus:ring-2 focus:ring-blue-500" aria-label="Open photo A">
             <img src="img9.jpg" alt="Photo A" class="w-full h-full object-cover" loading="lazy">
