--- a/activities.html
+++ b/activities.html
@@ -168,6 +168,45 @@
   })();
 </script>
 
+<section class="pt-12 pb-4 bg-white">
+    <div class="container mx-auto px-4 md:px-8">
+        <div class="relative overflow-hidden bg-gradient-to-br from-gray-50 to-gray-100 rounded-3xl p-6 md:p-12 border border-gray-200 shadow-sm">
+            
+            <div class="absolute -top-10 -right-10 w-32 h-32 bg-gray-200 rounded-full opacity-20"></div>
+
+            <div class="relative z-10 flex flex-col md:flex-row items-center justify-between gap-8">
+                <div class="text-center md:text-left">
+                    <div class="inline-flex items-center space-x-2 bg-white px-3 py-1 rounded-full border border-gray-200 mb-4">
+                        <span class="relative flex h-2 w-2">
+                            <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
+                            <span class="relative inline-flex rounded-full h-2 w-2 bg-green-500"></span>
+                        </span>
+                        <span class="text-xs font-bold uppercase tracking-wider text-gray-500">New: 2025 Report</span>
+                    </div>
+                    
+                    <h3 class="text-2xl md:text-3xl font-extrabold text-gray-900 mb-3">Our Impact in Numbers</h3>
+                    <p class="text-gray-600 text-base md:text-lg leading-relaxed max-w-md">
+                        Dive into the data and stories behind our missions. See how your support helps us train and empower the next generation.
+                    </p>
+                </div>
+
+                <div class="w-full md:w-auto">
+                    <a href="report_2025.pdf" download 
+                       class="flex items-center justify-center w-full md:w-auto px-8 py-4  bg-blue-600 text-white font-bold rounded-2xl shadow-xl active:scale-95 transition-transform duration-150">
+                        <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
+                        </svg>
+                        Download Report
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="about" class="py-16 bg-white">
+    ...
+
 <section id="about" class="py-16 bg-white">
     <div class="container mx-auto px-4 md:px-8">
         <div class="text-center mb-12">
@@ -180,10 +219,10 @@
         <div class="space-y-16">
 
             <!-- Initiative 1 (Image Left) -->
-            <div class="flex flex-col md:flex-row items-center gap-8">
+            <div class="flex flex-col md:flex-row items-center gap-4">
                 <img src="img4.jpg" class="w-full md:w-1/3 rounded-xl shadow object-cover h-[240px]" alt="Youth Skill Development">
                 <div class="md:w-2/3">
-                    <h4 class="text-3xl font-bold text-gray-900 mb-3">ENDURO: Youth Skill Development</h4>
+                    <h4 class="text-3xl font-bold text-gray-900 mb-2">ENDURO: Youth Skill Development</h4>
                     <p class="text-lg text-gray-600">
                         Training programs designed to equip young individuals with essential technical and soft skills, 
                         enabling them to become confident and employable.
@@ -192,10 +231,10 @@
             </div>
 
             <!-- Initiative 2 (Image Right) -->
-            <div class="flex flex-col md:flex-row-reverse items-center gap-8">
+            <div class="flex flex-col md:flex-row-reverse items-center gap-4">
                 <img src="img13.jpg" class="w-full md:w-1/3 rounded-xl shadow object-cover h-[240px]" alt="Community Service">
                 <div class="md:w-2/3">
-                    <h4 class="text-3xl font-bold text-gray-900 mb-3">Community Service Drives</h4>
+                    <h4 class="text-3xl font-bold text-gray-900 mb-2">Community Service Drives</h4>
                     <p class="text-lg text-gray-600">
                         Regular social service activities including cleanliness drives, food distribution,
                         plantation efforts, and support for essential community needs.
@@ -204,10 +243,10 @@
             </div>
 
             <!-- Initiative 3 (Image Left) -->
-            <div class="flex flex-col md:flex-row items-center gap-8">
+            <div class="flex flex-col md:flex-row items-center gap-4">
                 <img src="img3.jpg" class="w-full md:w-1/3 rounded-xl shadow object-cover h-[240px]" alt="Indian Knowledge Programs">
                 <div class="md:w-2/3">
-                    <h4 class="text-3xl font-bold text-gray-900 mb-3">The Vedic Gurukul: IKS Initiative</h4>
+                    <h4 class="text-3xl font-bold text-gray-900 mb-2">The Vedic Gurukul: IKS Initiative</h4>
                     <p class="text-lg text-gray-600">
                         Classes to introduce students to the rich knowledge of Indian Vedas and to teach moral values based on the Indian scriptures.
                     </p>
@@ -215,10 +254,10 @@
             </div>
 
             <!-- Initiative 4 (Image Right) -->
-            <div class="flex flex-col md:flex-row-reverse items-center gap-8">
+            <div class="flex flex-col md:flex-row-reverse items-center gap-4">
                 <img src="img2.jpg" class="w-full md:w-1/3 rounded-xl shadow object-cover h-[240px]" alt="Education Support">
                 <div class="md:w-2/3">
-                    <h4 class="text-3xl font-bold text-gray-900 mb-3">Mental Wellness Sessions</h4>
+                    <h4 class="text-3xl font-bold text-gray-900 mb-2">Mental Wellness Sessions</h4>
                     <p class="text-lg text-gray-600">
                         Providing assistance, mentorship, and counseling 
                         to children from underserved backgrounds.
@@ -227,10 +266,10 @@
             </div>
 
             <!-- Initiative 5 (Image Left) -->
-            <div class="flex flex-col md:flex-row items-center gap-8">
+            <div class="flex flex-col md:flex-row items-center gap-4">
                 <img src="img1.jpg" class="w-full md:w-1/3 rounded-xl shadow object-cover h-[240px]" alt="Leadership Training">
                 <div class="md:w-2/3">
-                    <h4 class="text-3xl font-bold text-gray-900 mb-3">Leadership & Personality Development</h4>
+                    <h4 class="text-3xl font-bold text-gray-900 mb-2">Leadership & Personality Development</h4>
                     <p class="text-lg text-gray-600">
                         Structured programs that help youth build confidence, communication skills,
                         leadership traits, and a service-oriented mindset.
@@ -490,30 +529,30 @@
     function setupStrip(stripEl, btnPrev, btnNext) {
       if (!stripEl) return;
 
-      // Pointer drag
-      let isDown = false, startX = 0, scrollLeft = 0;
-      stripEl.addEventListener('pointerdown', (e) => {
-        isDown = true;
-        stripEl.setPointerCapture(e.pointerId);
-        stripEl.classList.add('dragging');
-        startX = e.clientX;
-        scrollLeft = stripEl.scrollLeft;
-      });
-      stripEl.addEventListener('pointermove', (e) => {
-        if (!isDown) return;
-        const x = e.clientX;
-        const walk = (startX - x); // positive -> scroll right
-        stripEl.scrollLeft = scrollLeft + walk;
-      });
-      stripEl.addEventListener('pointerup', (e) => {
-        isDown = false;
-        try { stripEl.releasePointerCapture(e.pointerId); } catch {}
-        stripEl.classList.remove('dragging');
-      });
-      stripEl.addEventListener('pointercancel', () => {
-        isDown = false;
-        stripEl.classList.remove('dragging');
-      });
+      // // Pointer drag
+      // let isDown = false, startX = 0, scrollLeft = 0;
+      // stripEl.addEventListener('pointerdown', (e) => {
+      //   isDown = true;
+      //   stripEl.setPointerCapture(e.pointerId);
+      //   stripEl.classList.add('dragging');
+      //   startX = e.clientX;
+      //   scrollLeft = stripEl.scrollLeft;
+      // });
+      // stripEl.addEventListener('pointermove', (e) => {
+      //   if (!isDown) return;
+      //   const x = e.clientX;
+      //   const walk = (startX - x); // positive -> scroll right
+      //   stripEl.scrollLeft = scrollLeft + walk;
+      // });
+      // stripEl.addEventListener('pointerup', (e) => {
+      //   isDown = false;
+      //   try { stripEl.releasePointerCapture(e.pointerId); } catch {}
+      //   stripEl.classList.remove('dragging');
+      // });
+      // stripEl.addEventListener('pointercancel', () => {
+      //   isDown = false;
+      //   stripEl.classList.remove('dragging');
+      // });
 
       // // Wheel: translate vertical wheel to horizontal scroll
       // stripEl.addEventListener('wheel', (e) => {
