--- a/activities.html
+++ b/activities.html
@@ -170,7 +170,7 @@
 
 <section class="pt-12 pb-4 bg-white">
     <div class="container mx-auto px-4 md:px-8">
-        <div class="relative overflow-hidden bg-gradient-to-br from-gray-50 to-gray-100 rounded-3xl p-6 md:p-12 border border-gray-200 shadow-sm">
+        <div class="relative overflow-hidden bg-gradient-to-br from-gray-50 to-gray-100 rounded-3xl p-6 border border-gray-200 shadow-sm">
             
             <div class="absolute -top-10 -right-10 w-32 h-32 bg-gray-200 rounded-full opacity-20"></div>
 
@@ -180,12 +180,12 @@
                         <span class="relative flex h-2 w-2">
                             <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
                             <span class="relative inline-flex rounded-full h-2 w-2 bg-green-500"></span>
-                        </span>
-                        <span class="text-xs font-bold uppercase tracking-wider text-gray-500">New: 2025 Report</span>
-                    </div>
+                          </span>
+                          <span class="text-xs font-bold uppercase tracking-wider text-gray-500">New: 2025 Report</span>
+                        </div>
+                        <h3 class="text-2xl md:text-3xl font-extrabold text-gray-900 mb-3">Our Impact in Numbers</h3>
                     
-                    <h3 class="text-2xl md:text-3xl font-extrabold text-gray-900 mb-3">Our Impact in Numbers</h3>
-                    <p class="text-gray-600 text-base md:text-lg leading-relaxed max-w-md">
+                    <p class="text-gray-600 text-base md:text-lg leading-relaxed max-w-2xl">
                         Dive into the data and stories behind our missions. See how your support helps us train and empower the next generation.
                     </p>
                 </div>
@@ -204,10 +204,7 @@
     </div>
 </section>
 
-<section id="about" class="py-16 bg-white">
-    ...
-
-<section id="about" class="py-16 bg-white">
+<section id="about" class="py-8 bg-white">
     <div class="container mx-auto px-4 md:px-8">
         <div class="text-center mb-12">
             <h3 class="text-4xl font-bold text-gray-900 mb-4">Our Initiatives</h3>
