--- a/activities.html
+++ b/activities.html
@@ -168,7 +168,7 @@
   })();
 </script>
 
-<section class="pt-12 pb-4 bg-white">
+<section class="pt-12 pb-8 bg-white">
     <div class="container mx-auto px-4 md:px-8">
         <div class="relative overflow-hidden bg-gradient-to-br from-gray-50 to-gray-100 rounded-3xl p-6 border border-gray-200 shadow-sm">
             
@@ -206,15 +206,14 @@
 
 <section id="about" class="py-8 bg-white">
     <div class="container mx-auto px-4 md:px-8">
-        <div class="text-center mb-12">
+        <div class="text-center mb-8">
             <h3 class="text-4xl font-bold text-gray-900 mb-4">Our Initiatives</h3>
-            <p class="text-xl text-gray-600 max-w-3xl mx-auto">
+            <p class="text-xl text-gray-600 mx-auto">
                 Our aim is two fold, first to train the youth and then to empower them to serve the society.
             </p>
         </div>
 
         <div class="space-y-16">
-
             <!-- Initiative 1 (Image Left) -->
             <div class="flex flex-col md:flex-row items-center gap-4">
                 <img src="img4.jpg" class="w-full md:w-1/3 rounded-xl shadow object-cover h-[240px]" alt="Youth Skill Development">
@@ -257,7 +256,7 @@
                     <h4 class="text-3xl font-bold text-gray-900 mb-2">Mental Wellness Sessions</h4>
                     <p class="text-lg text-gray-600">
                         Providing assistance, mentorship, and counseling 
-                        to children from underserved backgrounds.
+                        to children from all backgrounds understanding the need of each individuals.
                     </p>
                 </div>
             </div>
