web dev bootcamp

--- a/activities.html
+++ b/activities.html
@@ -57,6 +57,8 @@
 
 <body class="bg-gray-50 text-gray-800">
 
+
+
     <!-- Header Section -->
 <!-- header.html -->
 <header class="bg-white shadow-lg sticky top-0 z-50">
@@ -123,6 +125,18 @@
       <path d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 015.656 5.656L10 18.343 3.172 11.828a4 4 0 010-5.656z" />
     </svg>
   </a>
+
+  <div class="bg-blue-600 text-white py-3 px-4 shadow-lg">
+      <div class="container mx-auto flex justify-between items-center">
+          <p class="text-sm md:text-base font-medium">
+              <span class="hidden md:inline"> New Bootcamp starts soon! </span>
+              Limited spots available for the 2026 Web Dev Bootcamp.
+          </p>
+          <a href="/webdev26.html" class="bg-white text-blue-600 px-4 py-1 rounded-full text-sm font-bold hover:bg-gray-100 transition-colors">
+              Register
+          </a>
+      </div>
+  </div>
 </header>
 
 <!-- Minimal JS for menu toggle + basic accessibility -->
