--- a/webdev26.html
+++ b/webdev26.html
@@ -231,6 +231,7 @@
                         <h2 class="text-3xl font-bold text-gray-900 mb-6 flex items-center">
                             Course Overview
                         </h2>
+                        <p class="mb-8">Industry relevant course to help you develop understanding of web tech, implementing code, integrating front-end with back-end, designing and at the end deploy websites.</p>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
                             <div class="p-5 bg-white rounded-xl border border-gray-100 shadow-sm">
                                 <h4 class="font-bold text-gray-900 mb-2">Model</h4>
@@ -278,8 +279,8 @@
                                            class="w-full px-4 py-3 rounded-lg border border-gray-200 focus:ring-2 focus:ring-blue-500 focus:border-transparent outline-none transition">
                                 </div>
                                 <div>
-                                    <label for="email" class="block text-sm font-semibold text-gray-700 mb-2">Email Address</label>
-                                    <input type="email" name="email" id="email" required placeholder="john@example.com" 
+                                    <label for="college-name" class="block text-sm font-semibold text-gray-700 mb-2">College</label>
+                                    <input type="text" name="college" id="college-name" required placeholder="AIT Pune" 
                                            class="w-full px-4 py-3 rounded-lg border border-gray-200 focus:ring-2 focus:ring-blue-500 focus:border-transparent outline-none transition">
                                 </div>
                             </div>
@@ -290,6 +291,19 @@
                                     <input type="tel" name="phone" id="phone" required placeholder="99999-00000" 
                                            class="w-full px-4 py-3 rounded-lg border border-gray-200 focus:ring-2 focus:ring-blue-500 focus:border-transparent outline-none transition">
                                 </div>
+                                <div>
+                                    <label for="email" class="block text-sm font-semibold text-gray-700 mb-2">Email Address</label>
+                                    <input type="email" name="email" id="email" required placeholder="john@example.com" 
+                                           class="w-full px-4 py-3 rounded-lg border border-gray-200 focus:ring-2 focus:ring-blue-500 focus:border-transparent outline-none transition">
+                                </div>
+                            </div>
+
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                                <div>
+                                    <label for="dob" class="block text-sm font-semibold text-gray-700 mb-2">Date of Birth</label>
+                                    <input type="date" name="dob" id="dob" required placeholder="john@example.com" 
+                                           class="w-full px-4 py-3 rounded-lg border border-gray-200 focus:ring-2 focus:ring-blue-500 focus:border-transparent outline-none transition">
+                                </div>                                
                                 <div>
                                     <label for="experience" class="block text-sm font-semibold text-gray-700 mb-2">Coding Experience</label>
                                     <select name="experience" id="experience" 
@@ -302,11 +316,11 @@
                             </div>
 
                             <button type="submit" class="w-full bg-blue-600 text-white font-bold py-4 px-6 rounded-lg hover:bg-blue-700 transform hover:-translate-y-1 transition duration-300 shadow-lg">
-                                Submit Respomse
+                                Submit Response
                             </button>
                             
                             <p class="text-xs text-center text-gray-500 mt-4">
-                                By submitting, you agree to receive communications regarding the EmpowerNext NGO Bootcamp.
+                                After submitting, you would receive communications regarding the Bootcamp on WhatsApp.
                             </p>
                         </form>
                     </div>
